# sekha-cli

./: .env.example  .gitignore  README.md  TESTING.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
scripts/: install-dev.sh  setup-dev.sh  test.sh
sekha_cli/: __init__.py  cli.py  client.py  config.py  main.py
tests/: conftest.py  test_client.py  test_commands.py  test_config.py
