[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sekha-cli"
version = "0.1.0"
description = "Command-line interface for Sekha AI Memory Controller"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Sekha Contributors"}
]
dependencies = [
    "sekha-python-sdk>=0.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0"
]

[project.scripts]
sekha = "sekha_cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=sekha_cli --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["sekha_cli"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "C", "N", "UP", "S", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "COM812", "ISC001"]

[tool.black]
line-length = 88
target-version = ['py38']